--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>ecwt-portfolio</title>
 	</head>
 	<body>
 		<slot />
@@ -16,7 +16,14 @@
 	html,
 	body {
 		margin: 0;
+		padding:0;
 		width: 100%;
 		height: 100%;
+		overflow: hidden;
+		background-color: #242424;
+		display: flex;
+		justify-content: center;
+		
+
 	}
 </style>
