--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,25 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import '../styles/styling.css'
 ---
 
 <Layout>
-	<Welcome />
+	<div class="headertop">
+		<h1
+		class="hoverable" 
+		style=
+		"cursor:pointer;"
+		onclick="">Home</h1>
+		<h1>Works</h1>
+		<h1>About me</h1>
+	</div>
+	
+	<div class="container">
+	<div class="box">
+		<h1 class="normaltext"></h1>
+	</div>
+	</div>
+	<div class="maincontent">
+
+	</div>
 </Layout>
