--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,29 @@ import '../styles/styling.css'
 ---
 
 <Layout>
-	<div class="headertop">
-		<h1
-		class="hoverable" 
-		style=
-		"cursor:pointer;"
-		onclick="">Home</h1>
-		<h1>Works</h1>
-		<h1>About me</h1>
-	</div>
-	
-	<div class="container">
-	<div class="box">
-		<h1 class="normaltext"></h1>
-	</div>
-	</div>
-	<div class="maincontent">
+<div class="profile-section">	
+	<div class="profileinfo">
+		<h1 style="color:#716969">Hello,</h1>
+		<h1>I'm Jobert Ecawat</h1>
+		<p>I'm an IT student who is passionate about system development <br> I usually take on the role of a front-end dev</p>
+		<br>
+		<p>I also draw, likes to read and play games casually</p>
 
+		<div class="my-links">
+		<img src="github.svg" alt="github">
+		<img src="facebook-logo.svg" alt="fb">
+		<img src="discord-logo.svg" alt="discord">
+		</div>
 	</div>
+
+	<div class="image-section">
+		<img src="me.jpg" 
+		alt="picture ko" 
+		class="roundedimage">
+	</div>
+
+	
+</div>
+	
+	
 </Layout>
