--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,12 +18,9 @@
 		margin: 0;
 		padding:0;
 		width: 100%;
-		height: 100%;
-		overflow: hidden;
-		background-color: #242424;
+		height: 100vh;
+		background-color: #	FBFBFB;
 		display: flex;
-		justify-content: center;
-		
-
+		flex-direction: row;
 	}
 </style>
