--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,12 +15,14 @@
 <style>
 	html,
 	body {
-		margin: 0;
+		margin-top: auto;
 		padding:0;
 		width: 100%;
 		height: 100vh;
-		background-color: #	FBFBFB;
+		background-color: #161717;
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
+		align-items: center;
+		
 	}
 </style>
