--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import '../styles/styling.css'
             <h1 class="name-head">Jobert Ecawat</h1>
 
                 <h1 class="name-head-p">Hello, I'm an IT student studying at QCU, have a keen interest at system development.</h1>
-                <h1 class="name-head-p">I like old hardware and tech. I also draw.</h1>
+                <h1 class="name-head-p">I like niche hardware and tech. I also draw.</h1>
             </div> <!-- normal div end -->
         </div> <!-- div row reverse -->
         <section class="container-links">
