--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import '../styles/styling.css'
                 <h1 class="name-head-p">Hello, I'm an IT student studying at QCU, have a keen interest at system development.</h1>
                 <h1 class="name-head-p">I like niche hardware and tech. I also draw.</h1>
             </div> <!-- normal div end -->
-        </div> <!-- div row reverse -->
+        </div> <!-- div row reverse end -->
         <section class="container-links">
             <div class="links-icon">
                 <a href="https://github.com/jyynso" title="my github profile">
