changing description and adding routing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,12 @@ import '../styles/styling.css'
     <!-- main container  -->
     <div class="container-main fade-in">
         <div class="navigation">
+            <div class="nav-page">
+                <h1 class="name-head-p">/</h1>
+            </div>
+            <div class="nav-page">
+                <h1 class="name-head-p">projects</h1>
+            </div>
             <div class="nav-icon" id="theme-toggle">
                 <svg xmlns="http://www.w3.org/2000/svg" 
                     width="28" 
@@ -27,8 +33,8 @@ import '../styles/styling.css'
             <div class="container-sub1">
             <h1 class="name-head">Jobert Ecawat</h1>
 
-                <h1 class="name-head-p">Hello, I'm an IT student studying at QCU, have a keen interest at system development.</h1>
-                <h1 class="name-head-p">I like niche hardware and tech. I also draw.</h1>
+                <h1 class="name-head-p">I'm an IT student at QCU with a passion for learning new things. And I am currently exploring where my skills can fit in.</h1>
+                <h1 class="name-head-p">I also draw and read books.</h1>
             </div> <!-- normal div end -->
         </div> <!-- div row reverse end -->
         <section class="container-links">
