--- a/src/styles/styling.css
+++ b/src/styles/styling.css
@@ -36,9 +36,12 @@ body {
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
-    width: 93.5%;
+    width: auto;
     align-items: center;
-    justify-content: flex-end;
+}
+.nav-page {
+    padding-right: 3%;
+    cursor: pointer;
 }
 .nav-icon {
     display: flex;
@@ -50,6 +53,7 @@ body {
     border: 2px solid transparent;
     transition: background-color 0.3s ease, border-color 0.3s ease;
     cursor: pointer;
+    margin-left: auto;
 }
 .nav-icon:hover {
     border-color: var(--nav-icon-hover-border);
@@ -83,7 +87,8 @@ body {
 .container-links {
     display: flex;
     align-items: center;
-    padding-left: 4%;
+    gap: 0.5%;
+    padding-left: auto;
 }
 .container-main {
     display: flex;
@@ -98,10 +103,16 @@ body {
 .container-sub2 {
     display: flex;
     flex-direction: row-reverse;
-    padding: 5%;
+    padding: 3%;
     flex: wrap;
     justify-content: center;
     align-items: center;
+}
+.image-wrapper {
+    width: 120%;
+    max-width: 400px;
+    margin: 0 auto 25px auto;
+    flex-basis: auto;
 }
 .name-head {
     font-family: "IBM Plex Mono", monospace;
