added pages and changed favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,14 @@ import '../styles/styling.css'
     <div class="container-main fade-in">
         <div class="navigation">
             <div class="nav-page">
-                <h1 class="name-head-p">/</h1>
+                <a href="/"
+                    <h1 class="name-head-pv">/</h1>
+                </a>
             </div>
             <div class="nav-page">
-                <h1 class="name-head-p">projects</h1>
+                <a href="projects"
+                    <h1 class="name-head-pv">projects</h1>
+                </a>
             </div>
             <div class="nav-icon" id="theme-toggle">
                 <svg xmlns="http://www.w3.org/2000/svg" 
@@ -34,7 +38,7 @@ import '../styles/styling.css'
             <h1 class="name-head">Jobert Ecawat</h1>
 
                 <h1 class="name-head-p">I'm an IT student at QCU with a passion for learning new things. And I am currently exploring where my skills can fit in.</h1>
-                <h1 class="name-head-p">I also draw and read books.</h1>
+                <h1 class="name-head-p">I also draw and read.</h1>
             </div> <!-- normal div end -->
         </div> <!-- div row reverse end -->
         <section class="container-links">
