--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/multo.svg" />
+		<link rel="icon" type="image/svg+xml" href="/halaman2.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>ecwt</title>
 	</head>
