--- a/src/styles/styling.css
+++ b/src/styles/styling.css
@@ -42,6 +42,14 @@ body {
 .nav-page {
     padding-right: 3%;
     cursor: pointer;
+    padding: 1%;
+    border-radius: 10px;
+    background-color: transparent;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    cursor: pointer;
+}
+.nav-page:hover {
+    background-color: var(--links-icon-hover-bg);
 }
 .nav-icon {
     display: flex;
@@ -130,6 +138,7 @@ body {
     font-family: "IBM Plex Mono", monospace;
     font-size: 18px;
     font-weight: 450;
+    text-decoration: none;
     color: var(--paragraph-color);
 }
 .about-head {
