added gmail compose

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ import '../styles/styling.css'
                 </a>
                 </div>
             <div class="links-icon">
-                <a href="ecawat.jobert.ansong@gmail.com" title="send me an email">
+                <a href="mailto:ecawat.jobert.ansong@gmail.com" title="send me an email">
                     <svg xmlns="http://www.w3.org/2000/svg" 
                     width="40" 
                     height="40" 
