--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -7,22 +6,17 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>ecwt</title>
 	</head>
+
 	<body>
-		<slot />
+		<div class="main-cont">
+			<nav class="navigation">
+				<ul class="nav-bar">
+					<a href="/">~</a>
+					<a href="/projects">projects</a>
+				</ul>
+			</nav>
+
+			<slot/>
+		</div>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin-top: auto;
-		padding:0;
-		width: 100%;
-		height: 100vh;
-		background-color: #161717;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		
-	}
-</style>
