--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,12 +12,43 @@ import '../styles/styles.css'
             <p class="t3">I have a keen interest in everything tech <br />related and have a passion for learning new things.</p>
             <p class="t3">I also draw and read.</p>
         </section>
+
+        <section class="links-cont">
+            <div class="indiv-link">
+                <a href="https://web.facebook.com/ecwt26/" title="fb account">
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    width="55" 
+                    height="55" 
+                    fill="#504945" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm8,191.63V152h24a8,8,0,0,0,0-16H136V112a16,16,0,0,1,16-16h16a8,8,0,0,0,0-16H152a32,32,0,0,0-32,32v24H96a8,8,0,0,0,0,16h24v63.63a88,88,0,1,1,16,0Z"></path>
+                    </svg>
+                </a>
+            </div>
+
+            <div class="indiv-link">
+                <a href="https://github.com/jyynso" title="guthib account">
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    width="55" 
+                    height="55" 
+                    fill="#504945" viewBox="0 0 256 256"><path d="M208.31,75.68A59.78,59.78,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H124A59.75,59.75,0,0,0,76,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,56,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,96,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40H96v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,216,112v-8A58.14,58.14,0,0,0,208.31,75.68ZM200,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.83a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h32.35a8,8,0,0,0,6.74-3.69,43.87,43.87,0,0,1,32.32-20.06A43.81,43.81,0,0,1,192,73.83a8.09,8.09,0,0,0,1,7.65A41.72,41.72,0,0,1,200,104Z"></path>
+                    </svg>
+                </a>
+            </div>
+
+            <div class="indiv-link">
+                <a href="mailto:ecawat.jobert.ansong@gmail.com" title="send me an email">
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    width="55" 
+                    height="55" 
+                    fill="#504945" viewBox="0 0 256 256"><path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48ZM203.43,64,128,133.15,52.57,64ZM216,192H40V74.19l82.59,75.71a8,8,0,0,0,10.82,0L216,74.19V192Z"></path>
+                    </svg>
+                </a>
+            </div>
+        </section>
     </section>
 
     <section class="photo-cont">
         <img class="image" src="/maangas.png"/>
     </section>
-
 
 </div>
 </Layout>
