--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -46,12 +46,37 @@ p {
         gap: 15px;
 
         opacity: 0;
-        animation: fadeIn  0.5s forwards;
+		animation: fadeIn 0.3s ease-out 0.3s forwards;
+        /* animation: fadeIn  0.5s forwards; */
     }
+.links-cont {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+	margin: 10px 0 auto 0;
+	
+	opacity: 0;
+	animation: fadeIn 0.5s ease-out 0.5s forwards;
+
+}
+.indiv-link {
+	background-color: transparent;
+	cursor: pointer;
+	padding: 5px;
+}
+	.indiv-link:hover {
+		color: #282828;
+		border-radius: 5px;
+		background-color: #f08b89;
+		transition: 0.3s ease;
+	}
 /*for navigation*/
 .navigation {
     padding-top: 20px;
     padding-bottom: 10px;
+
+	opacity: 0;
+	animation: fadeIn 0.8s ease-out 0.8s forwards;
 }
 .nav-bar {
     display: flex;
@@ -84,7 +109,7 @@ p {
     margin: 30px, 0, 0, auto;
     padding: 0;
     opacity: 0;
-    animation: fadeIn 0.8s ease-out 0.8s forwards;
+    animation: fadeIn 0.6s ease-out 0.6s forwards;
 }
 .image {
     width: 100%;
@@ -99,7 +124,8 @@ p {
     color: #1d2021;
 
     opacity: 0;
-    animation: fadeIn 0.3s ease-out 0.3s forwards;
+	animation: fadeIn 0.5s forwards;
+    /* animation: fadeIn 0.3s ease-out 0.3s forwards; */
 }
 .t3 {
     font-family: 'Noto Sans Mono', sans-serif;
