--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap');
 
-/* simple fade-in */
+/* simple fadeni ahahsdhsjhaohfd ajggs  :D :D :D  */
 @keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
@@ -35,15 +35,15 @@ p {
     flex-direction: column;
     margin-top: 50px;
     gap: 15px;
-
-    opacity: 0;
-    animation: fadeIn 0.8s ease-out 0.4s forwards;
 }
 .sub-cont2-div2 {
     display:flex;
     flex-direction: column;
     margin-top: 20px;
     gap: 15px;
+
+	opacity: 0;
+    animation: fadeIn 0.8s ease-out 0.4s forwards;
 }
 
 /* links */
@@ -74,7 +74,7 @@ p {
     padding-bottom: 10px;
 
 	opacity: 0;
-	animation: fadeIn 0.8s ease-out 1.6s forwards;
+	animation: fadeIn 0.3s ease-out 0.3s forwards;
 }
 .nav-bar {
     display: flex;
@@ -125,7 +125,7 @@ p {
     color: #1d2021;
 
     opacity: 0;
-    animation: fadeIn 0.8s ease-out 0s forwards;
+    animation: fadeIn 0.3s ease-out 0s forwards;
 }
 .t3 {
     font-family: 'Noto Sans Mono', sans-serif;
