--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -169,16 +169,7 @@ p {
         text-align: center;
 		padding-top: 10px;
     }
-    .name-head-p {
-        font-size: 16px;
-        text-align: center;
-    }
-    .name-head-pv {
-        font-size: 18px;
-    }
-    .container-links {
-        padding: 0;
-        align-items: center;
-        justify-content: center;
-    }
+    .links-cont {
+		justify-content: center;
+	}
 }
