--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -60,12 +60,12 @@ p {
 	background-color: transparent;
 	cursor: pointer;
 	padding: 5px;
+    transition: background-color 0.5s ease, color 0.5s ease, border-radius 0.5s ease;
 }
 .indiv-link:hover {
 	color: #282828;
 	border-radius: 5px;
 	background-color: #f08b89;
-	transition: 0.3s ease;
 }
 
 /* navigation */
