removed project in the layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@
 		<div class="main-cont">
 			<nav class="navigation">
 				<ul class="nav-bar">
-					<a href="/">~</a>
+					<a href="/"> <strong>~</strong> </a>
 				</ul>
 			</nav>	
 
