fixed project structure; might add new things later

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Links from '../components/links.astro';
-import Description from '../components/description.astro';
-import Image from '../components/image.astro';
+import Hero from '../components/hero.astro';
 import '../styles/styles.css'
 ---
 <Layout>
-<div class="sub-cont">
-    <section class="sub-cont2">
-        <Description/>
-        <Links/>
-    </section>
-    <Image/>
-</div>
+    <Hero/>
 </Layout>
