fixed width and alignment: for larger screen and mobile

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,14 +8,15 @@
 	</head>
 
 	<body>
-		<div class="main-cont">
+		<div class="content">
 			<nav class="navigation">
 				<ul class="nav-bar">
 					<a href="/"> <strong>~</strong> </a>
 				</ul>
-			</nav>	
+			</nav>
 
 			<slot/>
-		</div>
+				
+			</div>
 	</body>
 </html>
